--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
 <resources>
     <string name="app_name">MeteoChallenge</string>
+    <string name="degre_celcius">°C</string>
+    <string name="metric_speed">"km/h"</string>
+    <string name="temp_min_max">"%1s / %1s"</string>
 </resources>
