Add lotties animations and little refacto

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="degre_celcius">°C</string>
     <string name="metric_speed">"km/h"</string>
     <string name="temp_min_max">"%1s / %1s"</string>
+  <string name="city">PARIS</string>
 </resources>
